# aihub

./: .gitignore  .rumdl.toml  .typos.toml  AGENTS.md  Cargo.toml  Justfile  README.md  config-example.yaml
crates/hub-core/: Cargo.toml
crates/hub-core/src/: budget.rs  error.rs  lib.rs  rate_limit.rs  state.rs
crates/hub-core/src/config/: hash.rs  mod.rs
crates/hub-core/src/models/: chat.rs  registry.rs  responses.rs
crates/hub-core/src/provider/: mod.rs
crates/hub-core/src/types/: mod.rs  virtual_key.rs
crates/hub-gateway/: Cargo.toml
crates/hub-gateway/src/: lib.rs  openapi.rs  routes.rs
crates/hub-gateway/src/middleware/: budget_enforcer.rs  byok_handler.rs  mod.rs  rate_limiter.rs  virtual_key_auth.rs
crates/hub-gateway/src/pipeline/: handler.rs
crates/hub-gateway/tests/bdd/: main.rs
crates/hub-management/: Cargo.toml
crates/hub-management/src/: dto.rs  errors.rs  lib.rs  state.rs
crates/hub-management/src/api/routes/: mod.rs  virtual_key_routes.rs
crates/hub-management/src/db/repositories/: mod.rs  virtual_key_repository.rs
crates/hub-management/src/services/: mod.rs  virtual_key_config_service.rs  virtual_key_service.rs
crates/hub_lib/: Cargo.toml
crates/hub_lib/src/: lib.rs
crates/hub_lib/tests/: config_hash_tests.rs  config_tests.rs  management_end_to_end_integration_test.rs  model_definition_api_tests.rs  pipeline_header_routing_test.rs  pipelines_api_integration_tests.rs  provider_api_tests.rs  router_cache_tests.rs  router_integration_test.rs  unified_openapi_test.rs
migrations/: 001_initial_ee_schema.sql  002_create_model_definitions_table.sql  003_create_pipelines_and_plugins_tables.sql  004_create_virtual_keys.sql
specs/2026-06-15-01-refactor-with-liter-llm/: design.md  tasks.md
specs/2026-06-15-01-refactor-with-liter-llm/features/: byok-virtual-keys.feature  gateway-liter-llm.feature
