
[workspace]
members = [
    "bin/hub",
    "crates/hub-core",
    "crates/hub-gateway",
    "crates/hub-management",
    "crates/hub_lib",
]
resolver = "3"
[workspace.package]
version = "0.10.0"
edition = "2024"
license = "MIT"
repository = "Apache-2.0"

[workspace.dependencies]
# local crates
hub-core = { path = "crates/hub-core" }
hub-gateway = { path = "crates/hub-gateway" }
hub-management = { path = "crates/hub-management" }

# external crates
arc-swap = "1.9.1"
async-trait = "0.1.89"
axum = "0.8.9"
axum-prometheus = "0.10.0"
axum-test = "20.1.0"
chrono = "0.4.45"
ecdysis = "1.1.1"
eyre = "0.6.12"
futures = "0.3.32"
hpx = "2.4.17"
liter-llm = "1.5.1"
opentelemetry = "0.32.0"
opentelemetry-otlp = "0.32.0"
opentelemetry-semantic-conventions = "0.32.0"
opentelemetry_sdk = "0.32.1"
parking_lot = "0.12.5"
proptest = "1.11.0"
scc = "3.7.3"
serde = "1.0.228"
serde_json = "1.0.150"
serde_yaml = "0.9.33"
sqlx = "0.9.0"
tempfile = "3.27.0"
testcontainers = "0.27.3"
testcontainers-modules = "0.15.0"
thiserror = "2.0.18"
tokio = "1.52.3"
tower = "0.5.3"
tower-http = "0.7.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
utoipa = "5.5.0"
utoipa-scalar = "0.3.0"
utoipa-swagger-ui = "9.0.2"
uuid = "1.23.3"
wiremock = "0.6.5"
