
[workspace]
members = ["bin/hub", "crates/hub-core", "crates/hub-gateway", "crates/hub-management"]
resolver = "3"
[workspace.package]
version = "0.10.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/longcipher/aihub"

[workspace.dependencies]
# local crates
hub-core = { path = "crates/hub-core" }
hub-gateway = { path = "crates/hub-gateway" }
hub-management = { path = "crates/hub-management" }

# external crates
arc-swap = "1.9.1"
axum = "0.8.9"
axum-prometheus = "0.10.0"
axum-test = "20.1.0"
chrono = "0.4.45"
ecdysis = "1.1.1"
eyre = "0.6.12"
liter-llm = "1.7.4"
proptest = "1.11.0"
scc = "3.8.3"
serde = "1.0.228"
serde_json = "1.0.150"
serde_yaml = "0.9.33"
sqlx = "0.9.0"
tempfile = "3.27.0"
testcontainers = "0.27.3"
testcontainers-modules = "0.15.0"
thiserror = "2.0.18"
tokio = "1.52.3"
tower-http = "0.7.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
utoipa = "5.5.0"
uuid = "1.23.3"
wiremock = "0.6.5"
