[package]
name = "hub-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum = { workspace = true, features = ["macros"] }
axum-prometheus.workspace = true
chrono.workspace = true
hex = "0.4.3"
hub-core.workspace = true
liter-llm.workspace = true
parking_lot.workspace = true
scc.workspace = true
serde_json.workspace = true
sha2 = "0.11.0"
tracing.workspace = true
utoipa = { workspace = true, features = ["axum_extras", "chrono", "uuid", "openapi_extensions"] }

[dev-dependencies]
axum-test.workspace = true
chrono.workspace = true
cucumber = "0.23.0"
tempfile.workspace = true
tokio = { workspace = true, features = ["full"] }
uuid.workspace = true
wiremock.workspace = true
