[package]
name = "hub-management"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum = { workspace = true, features = ["macros"] }
chrono.workspace = true
hex = "0.4.3"
hub-core.workspace = true
serde = { workspace = true, features = ["derive"] }
sha2 = "0.11.0"
sqlx = { workspace = true, features = ["tls-native-tls", "runtime-tokio", "postgres", "macros", "chrono", "uuid", "json", "migrate"] }
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
testcontainers.workspace = true
testcontainers-modules = { workspace = true, features = ["postgres"] }
